
0.8.4
(2008-x-x)
    PLUGINS:
    macro.py:
        hooke does not crash if it doesn't have permissions to create the folder
	fixed overwriting of export for curves with the same name and different numerical extension
	fixed macrodir (out of try-catch)
	cleaned debug output in execmacro
    DRIVERS:
	alternative version of picoforce driver


0.8.3
(2008-04-16)
    PLUGINS:
    generalvclamp.py:
        fixed autopeak header 
        fixed autopeak slope (now unwanted slope values are discarded)

0.8.2
(2008-04-10)
    PLUGINS:
    flatfilts.py:
        convfilt does not crash if a file is not a curve
    generalvclamp.py:
        autopeak now saves curve data correctly
        autopeak now generates a dummy note (so that copylog/notelog is aware you measured the curve)

0.8.1
(2008-04-07)
    PLUGINS:
    generalvclamp.py:
        fixed DeprecationWarning in flatten
    flatfilts.py
        convfilt now working
        

0.8.0:
(2008-04-04)
    hooke.py:
        sanity check of CLI plugins to avoid function overloading at startup
    hooke_cli.py ; libhooke.py:
        now playlists keep the index (when you reload the playlist, it starts from the
            last observed curve)
        updated plot to use _send_plot()
        hooke.conf accepts lists as arguments for variables in <display>
        txt, export now have consistent argument order (thanks to A.G.Casado for pointing me that)
        txt crashes no more if no filename is given (thanks to A.G.Casado for pointing me that)
    libhookecurve.py:
        added add_set() , remove_set() methods to make life easier for plugin writers
    procplots.py:
        plotmanip_correct() works with new picoforce.py deflection output (see)
    PLUGINS:
    fit.py:
        updated wlc to use _send_plot()
        wlc noauto now keeps the contact point
        wlc reclick to click again the contact point
        temperature now set in hooke.conf
    generalvclamp.py:
        implemented slope (thanks to Marco Brucale)