@@ -2,13 +2,13 @@
 <!-- To comment something, put dashes and ! like here -->
 <config>
 <!-- Internal variabls. -->
-    <display ext="1" colour_ext="None" ret="1" colour_ret="None" correct="1" colour_correct="None" contact_point="0" medfilt="0" xaxes="0" yaxes="0" flatten="1" temperature="293" auto_fit_points="50" auto_slope_span="20" auto_delta_force="10" fc_showphase="0" fc_showimposed="0" fc_interesting="0"/>
+    <display ext="1" colour_ext="None" ret="1" colour_ret="None" correct="1" colour_correct="None" contact_point="0" medfilt="0" xaxes="0" yaxes="0" flatten="1" temperature="293" auto_fit_points="10" auto_slope_span="10" auto_delta_force="10" fc_showphase="0" fc_showimposed="0" fc_interesting="0"/>
 
 <!-- 
 The following section defines your own work directory. Substitute your work directory.
      -->
 <workdir>
-    insert directory
+    /home/glacierre/hooke/
 </workdir>
 
 <!--
@@ -23,6 +23,7 @@ This section defines which plugins have to be loaded by Hooke.
     <!--superimpose/ -->
     <generalvclamp/>
     <massanalysis/>
+    <viewer/>
     <!-- tutorial/ -->
     <macro/>
 </plugins>
@@ -31,7 +32,7 @@ This section defines which plugins have to be loaded by Hooke.
 This section defines which drivers have to be loaded by Hooke.
     -->
 <drivers>
-    <picoforce/>
+    <picoforcealt/>
     <!-- hemingclamp/ -->
     <csvdriver/>
     <!-- tutorialdriver/ -->
